# slughorn

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  pytest.ini  slughorn-cairo.hpp  slughorn-canvas.hpp  slughorn-emoji.hpp  slughorn-freetype.hpp  slughorn-ft2.hpp  slughorn-nanosvg.hpp  slughorn-serial.hpp  slughorn-skia.hpp  slughorn.cpp  slughorn.hpp
ai/: context-core.md  context-python.md  context-todo-canvas.md  context-todo-geometry.md  context-todo-pybind.md  context-todo-renderdoc.md  context-todo-stroke.md  context-todo-textdilation.md
ext/: slughorn-python.cpp
slughorn/: cairo.hpp  canvas.hpp  emoji.hpp  freetype.hpp  nanosvg.hpp  render.hpp  serial.hpp  skia.hpp  slughorn.cpp  slughorn.hpp
test/: slughorn-test-bands.cpp  slughorn-test-cairo.cpp  slughorn-test-canvas.cpp  slughorn-test-nanosvg.cpp  slughorn-test-python.py  slughorn-test-render.cpp  slughorn_export.py  slughorn_render.py
test/benchmark/: Makefile  slughorn-benchmark-cairo.cpp  slughorn-benchmark-skia.cpp
test/python/: conftest.py  test_canvas.py  test_emoji.py  test_freetype.py  test_nanosvg.py  test_render.py  test_slughorn.py
